1.21.5+ && merge (neo)forge to 1 jar